[project]
name = "ha-wait-for-wolt"
version = "0.0.4"
requires-python = ">=3.14.2"
dependencies = []

[dependency-groups]
dev = [
  "pytest-homeassistant-custom-component==0.13.347",
  "ruff==0.15.22",
]

[tool.pytest.ini_options]
addopts = "--strict-markers"
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I", "SIM", "UP"]
